--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="939c60">  <td>24/08/16 21:03:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:parallel.parallelRun@4c60d6e9]">runScenario</td> 
-  <td>TestNG-PoolService-3@904447222</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>24/08/16 21:03:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:parallel.parallelRun@4c60d6e9]">runScenario</td> 
-  <td>TestNG-PoolService-3@904447222</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>24/08/16 21:03:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:parallel.parallelRun@4c60d6e9]">runScenario</td> 
-  <td>TestNG-PoolService-3@904447222</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>24/08/16 21:03:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:parallel.parallelRun@4c60d6e9]">runScenario</td> 
-  <td>TestNG-PoolService-3@904447222</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>24/08/16 21:03:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:parallel.parallelRun@4c60d6e9]">runScenario</td> 
-  <td>TestNG-PoolService-3@904447222</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>24/08/16 21:03:54</td>   <td>-895</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:parallel.parallelRun@4c60d6e9]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>24/08/16 21:04:48</td>   <td>53588</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:parallel.parallelRun@4c60d6e9]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
+<tr bgcolor="9869b8">  <td>24/09/01 21:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.ui.test.LoginTest@1ed6388a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1816725203</td>   <td></td> </tr>
+<tr bgcolor="9869b8">  <td>24/09/01 21:05:30</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserLogin()[pri:0, instance:com.ui.test.LoginTest@1ed6388a]">verifyUserLogin</td> 
+  <td>main@1816725203</td>   <td></td> </tr>
 </table>
