--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87a871">  <td>24/09/02 23:07:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.ui.test.LoginTest@7da10b5b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2088969892</td>   <td></td> </tr>
-<tr bgcolor="87a871">  <td>24/09/02 23:07:36</td>   <td>31345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserLogin()[pri:0, instance:com.ui.test.LoginTest@7da10b5b]">verifyUserLogin</td> 
-  <td>main@2088969892</td>   <td></td> </tr>
+<tr bgcolor="9869b8">  <td>24/09/02 23:45:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.ui.test.LoginTest@1ed6388a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1816725203</td>   <td></td> </tr>
+<tr bgcolor="9869b8">  <td>24/09/02 23:47:47</td>   <td>107839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserLogin()[pri:0, instance:com.ui.test.LoginTest@1ed6388a]">verifyUserLogin</td> 
+  <td>main@1816725203</td>   <td></td> </tr>
 </table>
